# AutomataMP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_vs2022.bat  cmake.toml  genschema.bat
.github/workflows/: build-server.yml  c-cpp.yml  dev-build-pr.yml  server-ubuntu.yml
dependencies/enetpp/: .gitignore  LICENSE  README.md
dependencies/enetpp/sample/: CMakeLists.txt  main.cpp
reversing/: README.md  nierautomata.genny
schema/: CreatePlayer.fbs  EntityPacket.fbs  Hello.fbs  Math.fbs  Packet.fbs  Packets.fbs  PlayerPacket.fbs  Welcome.fbs
server/: Dockerfile  README.md  go.mod  go.sum  main.go  masterserver.json  mockclient.go  server.go  server.json
server/Nier/: AnimationStart.go  Buttons.go  EntityData.go  EntityPacket.go  EntitySpawn.go  EntitySpawnParams.go  Packet.go  PacketType.go  PlayerData.go  Vector3f.go  Vector4f.go
server/automatamp/: Client.go  Connection.go  ErrorHandling.go  MasterServer.go  MockClient.go  PacketUtility.go  Room.go  Server.go
server/nier/: AnimationStart.go  EntityData.go  EntityPacket.go  EntitySpawnParams.go  EntitySpawnPositionalData.go  Hello.go  Packet.go  PacketType.go  PlayerData.go  PlayerPacket.go  SetMasterClient.go  Vector3f.go  Welcome.go
shared/sdk/: Behavior.hpp  BehaviorAppBase.hpp  CameraGame.cpp  CameraGame.hpp  EmBase.hpp  Entity.cpp  Entity.hpp  (+17 more)
src/: AutomataMP.cpp  AutomataMP.hpp  Crc32.cpp  DllMain.cpp  EntitySync.cpp  EntitySync.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  Mod.hpp  Mods.cpp  NierClient.cpp  NierServer.cpp  NierServer.hpp  PlayerHook.cpp  VehHooks.cpp  VehHooks.hpp
(+151 files in other folders)
